--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "node-appointment-api",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "test": "vitest"
+  },
   "repository": "git@github.com:vitorserrano/node-appointment-api.git",
   "author": "vitorserrano <vitorcirinoserrano@gmail.com>",
   "license": "MIT",
@@ -12,6 +15,10 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.3.0",
     "eslint-plugin-promise": "^6.1.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "vitest": "^0.24.3"
+  },
+  "dependencies": {
+    "date-fns": "^2.29.3"
   }
 }
